order counters by messages count *fix overflow

--- a/web/static/main.css
+++ b/web/static/main.css
@@ -25,6 +25,7 @@ header{
 
 .main-content{
     margin: 10px;
+    overflow: auto;
 }
 
 .table{
